# Anticipython

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
anticipython/: __main__.py  anticipython.py  main.py  peps.py  peps_store.py
