[bdist_wheel]
universal = 1

[metadata]
name = anticipython
version = 1.0.3
author = Brian Cristante
# author_email = TODO
url = https://github.com/brcrista/Anticipython
license_file = LICENSE
# description = <specified in setup.py because setup.cfg does not use UTF-8 on some platforms>
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[options]
packages = anticipython
python-requires = >=3.6
install-requires =
    beautifulsoup4>=4.8
    icalendar>=4.0
    requests>=2.22
